<resources>
    <string name="app_name">My First Instant App</string>
    <string name="titulo">Formulario de Alumno</string>
    <string name="cui">CUI</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="registrar">Registrar</string>
    <string name="salir">Salir</string>
    <string name="hint_cui">20095931</string>
    <string name="hint_nombres">Nombre1 Nombre2</string>
    <string name="hint_apellidos">Apellido1 Apellido2</string>
    <string name="hint_correo">***.***@unsa.edu.pe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>